--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "debug": "^2.3.3",
     "express": "^4.14.0",
     "express-hbs": "^1.0.4",
+    "firebase-admin": "^5.8.2",
+    "firebase-functions": "^0.8.1",
     "node-env-file": "^0.1.8",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
